--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "andreskrey/readability.php": "^2.1"
+        "andreskrey/readability.php": "^2.1",
+        "kreait/firebase-php": "^5.19"
     }
 }
